--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@
 .form-layout {
   padding: 12px;
   display: flex;
+  align-items: center;
   background-color: rgba(255, 255, 255, 0.2);
   width: 1160px;
   height: 70px;
@@ -123,15 +124,182 @@
 }
 
 .menu-job {
-  width: 100%;
-  height: auto;
+  margin-top: 87px;
 }
-.menu-job__tille {
+.menu-job__title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1160px;
+  height: 67px;
 }
-.job__tille {
+.job-title {
+  display: flex;
+
+  align-items: center;
+}
+.job-title__padding {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 67px;
+  width: 67px;
+  background: rgba(255, 255, 255, 0.4);
+  box-shadow: 0px 12.3421px 30px rgba(0, 0, 0, 0.08);
+  border-radius: 50%;
+}
+.job-title__padding-inside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white);
+  width: 53px;
+  height: 53px;
+  border-radius: 50%;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 34px;
+  line-height: 48px;
+  color: var(--blue);
+}
+
+.job__title {
   width: 67px;
   height: 67px;
   padding: 70.5px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 1);
+}
+.job-see {
+  width: 131px;
+  height: 44px;
+  border-radius: 50%;
+  font-weight: 500;
+  padding: 8px 16px;
+  color: var(--blue);
+}
+
+.container {
+  margin: 40px 0;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 32px;
+}
+.container-card {
+  padding: 16px;
+  width: 360px;
+  height: 156px;
+  background-color: var(--white);
+  border-radius: 16px;
+  border: 16px;
+}
+.card-head {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid rgba(229, 229, 229, 1);
+  padding-bottom: 8px;
+  align-items: center;
+}
+.card-headLogo {
+  display: flex;
+  gap: 8px;
+}
+.head-logo {
+  width: 32px;
+  height: 32px;
+}
+.head-name {
+  color: var(--blue);
+  font-weight: 500;
+  font-style: overline;
+}
+.card-button {
+  width: 66px;
+  height: 24px;
+  border-radius: 8px;
+  text-align: center;
+  background-color: var(--whitegray);
+}
+.card-button__full {
+  color: var(--blue);
+  font-size: 12px;
+  font-weight: 400;
+}
+.card-body {
+  width: 100%;
+  padding: 8px 0;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.card-body::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(50% 50%);
+  width: 1px;
+  height: 16px;
+  border: 1px solid var(--whitegray);
+}
+.money-name {
+  color: rgba(2, 26, 132, 1);
+}
+.money-vailua {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+}
+span {
+  opacity: 0.7;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+}
+.card-foot {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 24px;
+}
+.foot-left {
+  display: flex;
+  justify-content: space-between;
+  width: 169px;
+  height: 24px;
+}
+.foot-left__button,
+.foot-right {
+  width: 71px;
+  height: 24px;
+  text-align: center;
+
+  border-radius: 8px;
+}
+.foot-left__button {
+  background-color: rgba(242, 242, 242, 1);
+}
+.foot-buton {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  color: var(--blue);
+  text-align: center;
+}
+.foot-right {
+  width: 89px;
+  height: 24px;
+  background-color: rgba(254, 76, 76, 1);
+}
+
+.foot-right__button {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+  text-align: center;
+  color: white;
+  font-style: overline;
 }
