--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
   outline: none;
   margin-left: 8.5px;
 }
-
+/* list-sugger */
 .sugger-wapper {
   margin: 16px 0;
   display: flex;
@@ -122,7 +122,7 @@
   list-style: none;
   line-height: 20px;
 }
-
+/* phan-job-name */
 .menu-job {
   margin-top: 87px;
 }
@@ -180,7 +180,7 @@
   padding: 8px 16px;
   color: var(--blue);
 }
-
+/* phan-list job */
 .container {
   margin: 40px 0;
   display: grid;
@@ -213,7 +213,7 @@
 .head-name {
   color: var(--blue);
   font-weight: 500;
-  font-style: overline;
+  line-height: 1;
 }
 .card-button {
   width: 66px;
@@ -297,9 +297,97 @@ span {
 
 .foot-right__button {
   font-size: 12px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 16px;
   text-align: center;
   color: white;
-  font-style: overline;
+}
+.aside {
+  padding: 80px 0;
+}
+.aside-header {
+  text-align: center;
+  padding-bottom: 40px;
+}
+.aside-header___link,
+.aside-title {
+  color: var(--blue);
+}
+
+.aside-body {
+  display: flex;
+  justify-content: space-between;
+  gap: 32px;
+}
+.aside-section {
+  width: 365px;
+  height: 278px;
+  border-radius: 16px;
+  padding: 32px;
+  text-align: center;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-title {
+  margin-top: 16px;
+}
+.aside-section__red {
+  background: var(--red-gradient);
+  color: var(--redtext);
+}
+.aside-section__blue {
+  background: var(--blue-gradient);
+  color: var(--blue);
+}
+.aside-section__green {
+  background: var(--green-gradient);
+  color: var(--greentext);
+}
+.section-text {
+  font-size: 15px;
+}
+.section-title {
+  font-size: 18px;
+}
+.partner {
+  /* width: 100%;
+  height: 145px; */
+  margin: 80px;
+}
+.partner-name {
+  color: var(--blue);
+  margin: 0 auto;
+  text-align: center;
+}
+.partner-list {
+  margin-top: 48px;
+  display: flex;
+  justify-content: space-around;
+}
+.partner-iteam {
+  width: 156px;
+  height: 156px;
+  padding: 8;
+  border-radius: 16px;
+  background-color: #fff;
+  padding: 8px;
+}
+/* cooperate */
+.cooperate {
+  /* width: 100%;
+  height: 355px; */
+  margin-top: 88px;
+}
+.cooperate-header {
+  text-align: center;
+}
+.cooperate-link,
+.cooperate-title {
+  color: #021a84;
+}
+.cooperate-title {
+}
+.cooperate-list {
 }
